--- a/content/articles/icml2015.md
+++ b/content/articles/icml2015.md
@@ -1,6 +1,7 @@
 ---
 date: 2015-08-05T13:09:13Z
 title: Favourite Work at ICML 2015
+categories: "Machine Learning"
 ---
 
 This post is just to remind myself of some of my favourite posters/presentations that I saw while attending ICML. I have undoubtably missed a lot of interesting stuff. If you have any particular suggestions, please let me know!
